# ngspice_parallel

./: CMakeLists.txt  Makefile  README.md  README_CMake.md  README_Linux_macOS.md  build.sh  howto_start_sync.txt  ng_shared_parallel_test  nsynctest1.raw  nsynctest2.raw  nsynctest3.raw  setup_linux.sh  test_compilation.sh  test_linux_so.sh
cmake/: FindNGSpice.cmake  PrepareLibs.cmake
examples/: inv_oc2.cir  modelcard.nmos
ng_shared_parallel/: a.out  main.c
ng_shared_parallel_v/: ng_shared_parallel_v.sln
ng_shared_parallel_v/ng_shared_parallel_v/: ng_shared_test_v.vcxproj
simple_single/: CMakeLists.txt  build.sh  main.c
